--- a/css/sections/bento.css
+++ b/css/sections/bento.css
@@ -890,7 +890,7 @@
     border-top-left-radius: 0.375rem;
   }
   .flexible-workflows-heading h2 {
-    font-size: 1.25rem;
+    font-size: var(--font-size-subheading);
   }
 }
 
@@ -1067,7 +1067,7 @@
     border-top-left-radius: 0.375rem;
   }
   .bentoCarousel-heading p {
-    font-size: 1.25rem;
+    font-size: var(--font-size-subheading);
     max-width: 88%;
   }
   .bentoCarousel-heading {
